# VisionX

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  docker-compose.yml  render.yaml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  config.py  errors.py  extensions.py  logging.py  models.py  security.py
backend/app/blueprints/: __init__.py  auth.py  feeds.py  health.py  maintenance.py  shares.py  x_accounts.py
backend/app/services/: x_api.py
backend/migrations/: env.py
backend/migrations/versions/: 20260612_01_monorepo_rebuild.py
backend/tests/: __init__.py  conftest.py  test_auth.py  test_config.py  test_health_and_maintenance.py  test_legacy_migration.py  test_shares_and_feeds.py  test_x_api.py  test_x_oauth.py
docs/: API.md  ARCHITECTURE.md  README.md  VisionX_Legacy_Project_Report.docx  VisionX_Project_Report.tex
extension/: background.js  content.js  eslint.config.js  manifest.json  options.css  options.html  options.js  package-lock.json  package.json  popup.css  popup.html  popup.js
extension/lib/: renderer.js
extension/tests/: background.test.js  content.test.js  popup.test.js  renderer.test.js  visual-preview.html
scripts/: check.sh  package-extension.sh
